hack/dev/kind/gitea/gitea-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosmee
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gosmee
  template:
    metadata:
      labels:
        app: gosmee
    spec:
      containers:
        - image: ghcr.io/chmouel/gosmee:latest
          imagePullPolicy: IfNotPresent
          name: gosmee
          args:
            [
              "client",
              "--saveDir",
              "/tmp/save",
              "VAR_GITEA_SMEE_HOOK_URL",
              "VAR_URL",
            ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      volumes:
        - name: gitea-config
          configMap:
            name: gitea-config
            items:
              - key: app.ini
                path: app.ini
      containers:
        - image: quay.io/gpte-devops-automation/gitea
          imagePullPolicy: IfNotPresent
          name: gitea
          ports:
            - containerPort: 3000
          volumeMounts:
            # - name: gitea-data
            #   mountPath: /home/gitea/gitea
            - name: gitea-config
              mountPath: /home/gitea/conf
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  namespace: gitea
  name: gitea
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32567
      name: http-listener
